--- a/app/APPKanojo/app/src/main/res/layout/activity_main.xml
+++ b/app/APPKanojo/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         android:elevation="4dp"
         app:pstsIndicatorColor="@color/tab_strip"
         app:pstsIndicatorHeight="@dimen/tab_indicator_height"
-        app:pstsShouldExpand="true"/>
+        app:pstsShouldExpand="true"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
