--- a/app/APPKanojo/app/src/main/res/values/colors.xml
+++ b/app/APPKanojo/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#F44336</color>
-    <color name="primary_dark">#D32F2F</color>
-    <color name="primary_light">#FFCDD2</color>
+    <color name="primary">#8fcfff</color>
+    <color name="primary_dark">#8470ff</color>
+    <color name="primary_light">#84f0ff</color>
     <color name="primary_text">#212121</color>
     <color name="accent">#FFC107</color>
     <color name="secondary_text">#727272</color>
