--- a/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
@@ -8,25 +8,25 @@
 
     <TextView
         android:id="@+id/hello"
-        android:layout_width="366dp"
-        android:layout_height="295dp"
+        android:layout_width="800px"
+        android:layout_height="wrap_content"
         android:text="Hello World!"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.925" />
+        app:layout_constraintVertical_bias="0.337" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="424dp"
         android:onClick="onSpeechButtonClicked"
         android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/hello"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
