--- a/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/rootRL"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/welcomePage">
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
