--- a/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/hello"
+        android:id="@+id/textView_mainActivity_messageTextView"
         android:layout_width="800px"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -30,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rootRL"
+        android:id="@+id/image_mainActivity_background"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
