--- a/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,10 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/welcome_page">
+        android:background="@drawable/welcome_page"
+        android:elevation="-10dp"
+        >
+
     </RelativeLayout>
 
 
