--- a/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,10 @@
         android:id="@+id/textView_mainActivity_messageTextView"
         android:layout_width="800px"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Hi Master!!"
+        android:textColor="@color/colorMainPageMainTitle"
+        android:textSize="150px"
+        android:fontFamily="@font/lobster"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
