--- a/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/layout/activity_main.xml
@@ -37,12 +37,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/textView_mainActivity_popUpTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorMainPagePopUpBackground"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="130dp"
+        tools:layout_editor_absoluteY="190dp" />
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/image_mainActivity_background"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@drawable/welcome_page"
         android:elevation="-10dp"
-        android:orientation="vertical"></RelativeLayout>
+        android:orientation="vertical">
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
