--- a/speechToTextSampleCode/java-android/app/src/main/res/values/colors.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorMainPageMainTitle">#FF4081</color>
+    <color name="colorMainPagePopUpBackground">#fc9bbc</color>
 </resources>
