--- a/generateion1/testAPP/APPKanojo/app/src/main/res/layout/activity_main.xml
+++ b/generateion1/testAPP/APPKanojo/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.shuyan.appkanojo.MainActivity">
@@ -13,7 +15,7 @@
 
     <TextView
         android:id="@+id/textView_mainActivity_messageTextView"
-        android:layout_width="800px"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hi Master!!"
         android:textColor="@color/colorMainPageMainTitle"
@@ -26,6 +28,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.337" />
 
+    <info.hoang8f.widget.FButton
+        android:layout_width="wrap_content"
+        android:layout_height="100px"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="90dp"
+        android:text="English"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView_mainActivity_popUpTextView"
+        fbutton:cornerRadius="50px"
+        fbutton:shadowEnabled="true"
+        fbutton:shadowHeight="10px" />
 
     <Button
         android:id="@+id/button_mainActivity_startSpeech"
@@ -66,7 +79,8 @@
         android:layout_height="fill_parent"
         android:background="@drawable/welcome_page"
         android:elevation="-10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
     </RelativeLayout>
 
